fix some third overflows

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -240,6 +240,7 @@ figure {
     > div {
       @include breakpoint($small) {
         width: calc(50% - 0.5em);
+        min-width: 0;
       }
     }
 
@@ -255,6 +256,7 @@ figure {
     > div {
       @include breakpoint($small) {
         width: calc(33.3333% - 0.5em);
+        min-width: 0;
       }
     }
 
